[gd_scene load_steps=5 format=2]

[ext_resource path="res://Environment/Tiles/Tilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -29.0991, 209.208, 0, 0, 0, 0, 133.536, 208.854, 0, 0, 0, 0, 278.139, 206.379, 0, 0, 0, 0, 301.473, 117.637, 0, 0, 0, 0, 196.822, 118.344 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Tiles" type="Navigation2D" parent="."]

[node name="Tilemap" parent="Tiles" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 65535, 1, 0, 0, 1, 1, 1, 1, 2, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 2, 6, 1, 1, 7, 1, 2, 8, 1, 2, 9, 1, 3, 131071, 1, 131072, 65536, 1, 458752, 65537, 1, 458752, 65538, 1, 458752, 65539, 1, 458752, 65540, 1, 458752, 65541, 1, 458752, 65542, 1, 458752, 65543, 1, 458752, 65544, 1, 458752, 65545, 1, 131075, 196607, 1, 131072, 131072, 1, 458752, 131073, 1, 458752, 131074, 1, 458752, 131075, 1, 458752, 131076, 1, 458752, 131077, 1, 458752, 131078, 1, 458752, 131079, 1, 458752, 131080, 1, 458752, 131081, 1, 65539, 262143, 1, 65536, 196608, 1, 458752, 196609, 1, 458752, 196610, 1, 458752, 196611, 1, 458752, 196612, 1, 458752, 196613, 1, 458752, 196614, 1, 458752, 196615, 1, 458752, 196616, 1, 458752, 196617, 1, 65539, 327679, 1, 131072, 262144, 1, 458752, 262145, 1, 458752, 262146, 1, 458752, 262147, 1, 458752, 262148, 1, 458752, 262149, 1, 458752, 262150, 1, 458752, 262151, 1, 458752, 262152, 1, 458752, 262153, 1, 131075, 393215, 1, 131072, 327680, 1, 458752, 327681, 1, 458752, 327682, 1, 458752, 327683, 1, 458752, 327684, 1, 458752, 327685, 1, 458752, 327686, 1, 458752, 327687, 1, 458752, 327688, 1, 458752, 327689, 1, 65539, 458751, 1, 65536, 393216, 1, 458752, 393217, 1, 458752, 393218, 1, 458752, 393219, 1, 458752, 393220, 1, 458752, 393221, 1, 458752, 393222, 1, 458752, 393223, 1, 458752, 393224, 1, 458752, 393225, 1, 65539, 524287, 1, 131072, 458752, 1, 458752, 458753, 1, 458752, 458754, 1, 458752, 458755, 1, 458752, 458756, 1, 458752, 458757, 1, 458752, 458758, 1, 458752, 458759, 1, 458752, 458760, 1, 458752, 458761, 1, 65539, 589823, 1, 131072, 524288, 1, 458752, 524289, 1, 458752, 524290, 1, 458752, 524291, 1, 458752, 524292, 1, 458752, 524293, 1, 458752, 524294, 1, 458752, 524295, 1, 458752, 524296, 1, 458752, 524297, 1, 65539, 655359, 1, 196608, 589824, 1, 196610, 589825, 1, 196609, 589826, 1, 196610, 589827, 1, 196609, 589828, 1, 196610, 589829, 1, 196610, 589830, 1, 196609, 589831, 1, 196609, 589832, 1, 196609, 589833, 1, 196611 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Enemy" parent="Path2D" instance=ExtResource( 2 )]
position = Vector2( -19.4031, 209.186 )
offset = 9.7

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="MobTimer" type="Timer" parent="."]

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="UI/TextureButton" to="." method="_on_TextureButton_pressed"]
